--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
                     <div class="col-7">
                         <h2>{{name}}</h2>
                         <p>
-                             {% for go in goal %}
+                             {% for go in goalslist %}
                             <span class="badge badge-secondary mr-2">{{goals[go]}}</span>
                             {% endfor %}
                             
