--- a/templates/goal.html
+++ b/templates/goal.html
@@ -3,24 +3,24 @@
 
 
 
-    <h2 class="h1 text-center w-50 mx-auto mt-1 py-5 mb-4"><strong><br/>Преподаватели <br/> {{name}}</strong></h2>
+    <h2 class="h1 text-center w-50 mx-auto mt-1 py-5 mb-4"><strong><br/>Преподаватели <br/> {{goal}}</strong></h2>
 
 
     <div class="w-75 m-auto">
         
         
-        {% for teacher in sortedgoallst %}
+        {% for i in range(size) %}
         
 
       <div class="card mb-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-3"><a href="/profiles/{{teacher}}"><img src={{teachers[teacher]["picture"]}} class="img-fluid"></a></div>
+                    <div class="col-3"><a href="/profiles/{{sortedgoallst[i]}}"><img src={{pictures[i]}} class="img-fluid"></a></div>
                     <div class="col-9">
-                        <p class="float-right">Рейтинг: {{teachers[teacher]["rating"]}} Ставка: {{teachers[teacher]["price"]}} / час</p>
-                        <a href="/profiles/{{teacher}}"><h5>{{teachers[teacher]["name"]}}</h5></a>
-                        <p>{% filter truncate(143) %}{{teachers[teacher]["about"]}}{% endfilter %}</p>
-                        <a href="/profiles/{{teacher}}" class="btn btn-primary btn-sm mr-3">Записаться на пробный урок</a>
+                        <p class="float-right"><span  class=" badge badge-warning">Рейтинг: {{ratings[i]}}</span> <span  class=" badge badge-success"> Ставка: {{prices[i]}}  / час</span></p>
+                        <a href="/profiles/{{sortedgoallst[i]}}"><h5>{{names[i]}}</h5></a>
+                        <p>{% filter truncate(143) %}{{abouts[i]}}{% endfilter %}</p>
+                        <a href="/profiles/{{sortedgoallst[i]}}" class="btn btn-primary btn-sm mr-3">Записаться на пробный урок</a>
                         <a href="" class="btn btn-outline-primary btn-sm">Отправить сообщение</a>
                     </div>
                 </div>
