--- a/templates/booking.html
+++ b/templates/booking.html
@@ -6,9 +6,7 @@
         <div class="col-6 offset-3">
             
             
-            <form action="/done/{{id}}/{{daykey}}/{{time}}" class="card mb-3" method="GET">
-
-
+                
                   <div class="card-body text-center pt-5">
                     <img src={{picture}} class="mb-3" width="95" alt="">
                     <h5 class="card-title mt-2 mb-2">{{name}}</h5>
@@ -18,20 +16,22 @@
 
 
                    <hr/>
-
+             <form method="POST" action="{{ url_for('bking',id=id, day=daykey, time=time) }}" > 
+                {{ form.csrf_token }}
                    <div class="card-body mx-3">
 
                        <p class="mb-1 mt-2">Вас зовут</p>
-                       <input class="form-control" name="name"  type="text" placeholder="">
+                       {{form.name(class = "form-control")}}
 
                        <p class="mb-1 mt-2">Ваш телефон</p>
-                       <input class="form-control" name="number" type="text" placeholder="">
+                       {{form.number(class = "form-control")}}
 
                        <input type="submit" class="btn btn-primary btn-block mt-4" href="/" value="Записаться на пробный урок">
 
                    </div>
 
                 </form>
+           
 
         </div>
      </div>
