--- a/templates/request.html
+++ b/templates/request.html
@@ -4,8 +4,7 @@
 
      <div class="row mt-5">
         <div class="col-6 offset-3">
-            <form action="/reqdone" class="card mb-3" >
-
+             
 
                   <div class="card-body text-center pt-5">
                     <h3 class="card-title mt-4 mb-2">Подбор преподавателя</h3>
@@ -13,26 +12,22 @@
                   </div>
 
                    <hr/>
-
-                   <div class="card-body mx-3">
+ <form method="POST" action="{{ url_for('req') }}"> 
+                   <div class="card-body mx-1">
 
                        <div class="row">
+                           
                            <div class="col">
-
+                           
+                                {{ form.csrf_token }} 
                                <p>Какая цель занятий?</p>
 
-                               <div class="form-check ">
-                                <input type="radio" class="form-check-input" name="goal" value="travel"> Для путешествий
+                               <div>
+                                {{form.goal}}
                                </div>
-                               <div class="form-check ">
-                                <input type="radio" class="form-check-input" name="goal" value="learn"> Для школы
-                               </div>
-                               <div class="form-check ">
-                                <input type="radio" class="form-check-input" name="goal" value="work"> Для работы
-                               </div>
-                               <div class="form-check ">
-                                <input type="radio" class="form-check-input"name="goal" value="move"> Для переезда
-                               </div>
+                               {% for err in form.goal.errors %}
+                               <span  class=" badge badge-danger"> Выберите пункт. </span>     
+                                {% endfor %} 
 
                            </div>
 
@@ -41,17 +36,11 @@
                                <p>Сколько времени есть?</p>
 
                                <div class="form-check ">
-                                <input type="radio" class="form-check-input" name="time" value="1-2"> 1-2 часа в неделю
+                                {{form.free_time}}
                                </div>
-                               <div class="form-check ">
-                                <input type="radio"class="form-check-input" name="time" value="3-5"> 3-5 часов в неделю
-                               </div>
-                               <div class="form-check ">
-                                <input type="radio" class="form-check-input"name="time" value="5-7"> 5-7 часов в неделю
-                               </div>
-                               <div class="form-check ">
-                                <input type="radio" class="form-check-input"name="time" value="7-10"> 7-10 часов в неделю
-                               </div>
+                                {% for err in form.free_time.errors %}
+                               <span  class=" badge badge-danger"> Выберите пункт. </span>     
+                                {% endfor %} 
 
 
                            </div>
@@ -63,17 +52,17 @@
                    <div class="card-body mx-3">
 
                        <p class="mb-1 mt-2">Вас зовут</p>
-                       <input class="form-control" name="name" type="text" placeholder="">
+                       {{form.name(class = "form-control")}}
 
                        <p class="mb-1 mt-2">Ваш телефон</p>
-                       <input class="form-control" name="number" type="text" placeholder="">
+                       {{form.number(class = "form-control")}}
 
                        <input type="submit" class="btn btn-primary mt-4" value="Найдите мне преподавателя">
 
                    </div>
 
-                </form>
-
+                
+</form>
         </div>
      </div>
 
